dark mode fixed

--- a/src/style.css
+++ b/src/style.css
@@ -8,3 +8,6 @@ body{
     padding: 0;
     font-family: 'Cascadia Code',
 }
+.dark body{
+    background-color:rgb(36, 32, 32 );
+    }
